PR09: fixed telegram config, try resilient websocket connection