@@ -3,7 +3,6 @@ package io.prada.listener.dto.accounting;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
@@ -18,7 +17,9 @@ public class AccountingConsolidatedSymbolInfo {
 
     public AccountingConsolidatedSymbolInfo(AccountingConsolidatedSymbolInfo other) {
         this.symbol = other.getSymbol();
-        this.position = Optional.ofNullable(other.getPosition()).map(AccountingPosition::new).orElse(null);
-        this.orders = other.getOrders().stream().map(AccountingOrder::new).collect(Collectors.toList());
+        this.position = Optional.ofNullable(other.getPosition())
+            .map(pos -> pos.toBuilder().build())
+            .orElse(null);
+        this.orders = other.getOrders().stream().map(order -> order.toBuilder().build()).toList();
     }
 }
